--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
               {
                 initPayload: "/greet",
                 customData: { language: "en" },
-                // socketUrl: "http://localhost:5005",
+                // socketUrl: "https://baoan007.github.io/Chatbot_tuyensinh.io/",
                 socketUrl: "http://127.0.0.1:4040",
                 title: "AI Chatbot",
                 params: {
