--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 initPayload: "/greet",
                 customData: { language: "en" },
                 // socketUrl: "https://baoan007.github.io/Chatbot_tuyensinh.io/",
-                socketUrl: "http://127.0.0.1:4040",
+                socketUrl: "https://19b7-14-186-49-87.ngrok-free.app",
                 title: "AI Chatbot",
                 params: {
                   images: {
